# lunaris

./: .clippy.toml  .editorconfig  .gitignore  Cargo.toml  README.md  cspell.jsonc  package-lock.json  package.json
.github/actions/build-and-compress/: action.yaml
.github/actions/setup-deps/: action.yaml
.github/actions/setup-release/: action.yaml
.github/workflows/: build-emu.yaml  lint.yaml  test.yaml
core/arm7/: Cargo.toml
core/arm7/src/: bios.rs  cartridge.rs  cp15.rs  cpu.rs  dma.rs  emulator.rs  gpu.rs  gpu_3d.rs  gpu_engine.rs  interrupts.rs  lib.rs  read_arm7.rs  read_arm9.rs  rtc.rs  spi.rs  touchscreen.rs  write_arm7.rs
core/arm9/: Cargo.toml
core/arm9/src/: lib.rs  read_arm9.rs
core/audio/: Cargo.toml
core/audio/src/: lib.rs
core/cpu/: Cargo.toml
core/cpu/src/: arm_cpu.rs  arm_table.rs  coprocessor_15.rs  cpu_instructions.rs  instruction_table.rs  lib.rs
core/cpu/src/interpreter/: arm_instruction.rs  mod.rs  thumb_instruction.rs
core/free_bios/: Cargo.toml
core/free_bios/src/: arm7.rs  arm9.rs  firmware.rs  lib.rs
core/gpu/: Cargo.toml
core/gpu/src/: gpu_2d.rs  gpu_3d.rs  lib.rs
core/gpu/src/common/: _2d.rs  arm_rw.rs  draw_scanline.rs  draw_sprite.rs  gpu_reg.rs  init.rs  mod.rs  tmp.rs  vram_reader.rs
core/gpu/src/gpu_2d/: mod.rs
core/gpu/src/gpu_3d/: consts.rs  geometry.rs  mod.rs  render.rs  structs.rs
core/gpu/src/gpu_root/: arm_rw.rs  draw_scanline.rs  draw_scanline_3d.rs  draw_sprite.rs  getter.rs  matrix.rs  mod.rs  reader.rs  register.rs  render_2d.rs  setter.rs  vram_reader.rs  writer.rs
core/lunaris_emu/: Cargo.toml
core/lunaris_emu/src/: bios.rs  cartridge.rs  cp15.rs  cpu.rs  dma.rs  emulator.rs  error.rs  firmware.rs  interrupts.rs  ipc.rs  lib.rs  read_arm7.rs  read_arm9.rs  rtc.rs  spi.rs  timers.rs  touchscreen.rs  wifi.rs  write_arm7.rs  write_arm9.rs
core/lunaris_emu/src/cpu/: arm_cpu.rs  arm_table.rs  coprocessor_15.rs  disassemble.rs  instruction_table.rs  mod.rs
core/lunaris_emu/src/cpu/interpreter/: arm_instruction.rs  mod.rs  thumb_instruction.rs
core/lunaris_emu/src/emulator/: button.rs  cartridge.rs  dma.rs  emu_config.rs  interrupt.rs  load.rs  mod.rs  read_arm7.rs  read_arm9.rs  runner.rs  timers.rs  write_arm7.rs  write_arm9.rs
core/lunaris_emu/src/emulator/gpu/: execute.rs  gpu_3d.rs  mod.rs  run.rs
core/lunaris_emu/src/emulator/read/: mod.rs
core/lunaris_emu/src/emulator/write/: mod.rs
core/mem_const/: Cargo.toml
core/mem_const/src/: lib.rs
gui/desk/: Cargo.toml
gui/desk/src/: error.rs  hexdump.rs  lib.rs  nds_header.rs
gui/sample/: sample1.html  sample2.html  sample3.html  sample4.html
gui/tauri/: .gitignore  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
gui/tauri/src/: App.tsx  routeTree.gen.ts
gui/tauri/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
gui/tauri/src-tauri/capabilities/: default.json
gui/tauri/src-tauri/icons/: icon.icns
gui/tauri/src-tauri/src/: main.rs  runner.rs
gui/tauri/src/@types/: electorn.d.ts
gui/tauri/src/app/: layout.tsx
gui/tauri/src/components/atoms/ConvertButton/: ConvertButton.tsx
gui/tauri/src/components/hooks/: useBackup.ts
gui/tauri/src/components/hooks/useInjectCss/: useInjectCss.ts
gui/tauri/src/components/hooks/useStorageState/: useStorageState.ts
gui/tauri/src/components/hooks/useTimer/: index.ts
gui/tauri/src/components/layout/ClientLayout/: ClientLayout.tsx
gui/tauri/src/components/meta/: meta.ts
gui/tauri/src/components/molecules/Button/: Button.tsx
gui/tauri/src/components/molecules/ButtonWithToolTip/: ButtonWithTooltip.tsx
gui/tauri/src/components/molecules/DraggableGrid/: DraggableDataGrid.tsx  DraggableGridRow.tsx  index.tsx
gui/tauri/src/components/molecules/ImportLangButton/: ImportLangButton.tsx
gui/tauri/src/components/molecules/InputField/: InputField.tsx
gui/tauri/src/components/molecules/JsAutoRunButton/: JsAutoRunButton.tsx
gui/tauri/src/components/molecules/LogDirButton/: LogDirButton.tsx
gui/tauri/src/components/molecules/LogFileButton/: LogFileButton.tsx
gui/tauri/src/components/molecules/SelectWithLabel/: SelectWithLabel.tsx
gui/tauri/src/components/organisms/BackupExportButton/: BackupExportButton.tsx
gui/tauri/src/components/organisms/BackupImportButton/: BackupImportButton.tsx
gui/tauri/src/components/organisms/BackupMenuDialog/: BackupMenuDialog.tsx  CacheValueItem.tsx  CheckBoxControls.tsx
gui/tauri/src/components/organisms/BottomActionBar/: BottomActionBar.tsx  index.tsx
gui/tauri/src/components/organisms/CodeEditorTab/: CodeEditorTab.tsx
gui/tauri/src/components/organisms/ConvertForm/: ConvertForm.tsx  ConvertProvider.tsx  OutFormatList.tsx  PathSelector.tsx  PathSelectorButtons.tsx  PathTreeSelector.tsx  SelectionTypeRadios.tsx  renderStatusIcon.tsx
gui/tauri/src/components/organisms/CssList/: CssList.tsx
gui/tauri/src/components/organisms/EditorList/: EditorList.tsx
gui/tauri/src/components/organisms/I18nList/: I18nList.tsx
gui/tauri/src/components/organisms/LogLevelList/: LogLevelList.tsx
gui/tauri/src/components/organisms/Tabs/: Tabs.tsx
gui/tauri/src/components/providers/: EditorModeProvider.tsx  JsProvider.tsx  LogLevelProvider.tsx  NotifyProvider.tsx  PatchProvider.tsx  TabProvider.tsx  index.tsx
gui/tauri/src/lib/css/: index.ts
gui/tauri/src/lib/hash-djb2/: index.test.ts  index.ts
gui/tauri/src/lib/i18n/: index.ts
gui/tauri/src/lib/notify/: config.ts
gui/tauri/src/lib/path/: index.test.ts  index.ts
gui/tauri/src/lib/storage/: cacheKeys.ts  schemaStorage.ts  storage.ts
gui/tauri/src/lib/time/: index.ts
gui/tauri/src/lib/zod/: json-validation.ts  schema-utils.ts
gui/tauri/src/locales/: en-US.json  en.json  ja-JP.json
gui/tauri/src/routes/: __root.tsx  convert.tsx  hkanno.tsx  index.tsx  patch.tsx  settings.tsx
gui/tauri/src/services/: readme.md
gui/tauri/src/services/api/: backup.ts  dialog.ts  event.ts  fs.ts  global_events.ts  hkanno.test.ts  hkanno.ts  lang.ts  log.ts  patch.ts  patch_listener.ts  serde_hkx.ts  shell.ts  window.ts
xtask/: Cargo.toml
xtask/src/: main.rs
(+56 files in other folders)
