[package]
name = "xtask"
edition.workspace = true
authors.workspace = true
categories.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true


[dependencies]


[dev-dependencies]

[lints]
workspace = true
