[package]
name = "cpu"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
tracing = { workspace = true, optional = true }

[features]
tracing = ["dep:tracing"]

[lints]
workspace = true
