[package]
name = "lunaris_ds_gpu"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
tracing = { workspace = true, optional = true }

# workspace members
lunaris_ds_mem_const = { workspace = true }

[features]
default = ["tracing"]
tracing = ["dep:tracing"]
