[package]
name = "lunaris_ds_emu"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
tracing = { workspace = true, optional = true }
snafu = { workspace = true }

# workspace members
lunaris_ds_audio = { workspace = true }
lunaris_ds_cpu = { workspace = true }
lunaris_ds_free_bios = { workspace = true }
lunaris_ds_gpu = { workspace = true }
lunaris_ds_mem_const = { workspace = true }

[features]
default = ["tracing"]
tracing = ["dep:tracing"]
