[package]
name = "lunaris_ds_emu"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
chrono = { version = "0.4.43" }
tracing = { workspace = true, optional = true }
snafu = { workspace = true }

# workspace members
lunaris_ds_audio = { workspace = true }
lunaris_ds_free_bios = { workspace = true }
lunaris_ds_gpu = { workspace = true }
lunaris_ds_mem_const = { workspace = true }

[dev-dependencies]
quick_tracing = { version = "0.1.5", features = ["derive"] }

[features]
default = ["tracing"]
tracing = ["dep:tracing"]
