[package]
name = "desk"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
annotate-snippets = "0.11.5"
wgpu = "23.0"
winit = { version = "0.30", features = ["serde"] }
winnow = "0.7.13"
